example.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tstore-ui-websocket-headers
spec:
  headers:
    customRequestHeaders:
      Connection: "Upgrade"
      Upgrade: "websocket"
