tstore-interface.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tstore-interface-deployment
spec:
  selector:
    matchLabels:
      app: tstore-interface
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: tstore-interface
    spec:
      containers:
      - name: tstore-interface
        image: transpara/tstore-interface:0.143.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: transpara-docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tstore-interface-service
spec:
  selector:
    app: tstore-interface
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30083
  type: NodePort
