tsystem-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsystem-api-deployment
spec:
  selector:
    matchLabels:
      app: tsystem-api
  replicas: 2 
  template:
    metadata:
      labels:
        app: tsystem-api
    spec:
      containers:
      - name: tsystem-api
        image: transpara/tsystem:0.143.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: transpara-docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tsystem-api
spec:
  selector:
    app: tsystem-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
