gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tsystem-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
  - name: web
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
